# ai-calls-router

./: .coderabbit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  pyproject.toml  release-please-config.json  vulture_whitelist.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
ai_calls_router/: __init__.py  __main__.py  cli.py
ai_calls_router/_lib/: __init__.py  anthropic_schemas.py  config.py  conversion.py  jsonnum.py  litellm_guard.py  logging_setup.py  openai_inbound.py  openai_schemas.py  responses_inbound.py  types.py
ai_calls_router/accounting/: __init__.py  ledger.py  metrics.py  savings.py  shrink_stats.py
ai_calls_router/ops/: __init__.py  bootstrap.py  daemon.py  desktop.py  wizard.py  wrap.py
ai_calls_router/proxy/: chatgpt_oauth.py  codex_session.py  codex_ws_router.py  dashboard.html  observability.py  orchestrator.py  passthrough.py  route_dispatch.py  server.py  websocket_passthrough.py
ai_calls_router/routing/: __init__.py  agent_defaults.py  agent_topology.py  anthropic_oauth.py  codex_direct.py  compression.py  config_schema.py  content_sanitize.py  context_budget.py  credential_resolution.py  decide.py  direct.py  engine.py  forward_compression.py  provider_config.py  reduce.py  route_json.py  synthesis.py  synthesis_openai.py  synthesis_responses.py  tier_selection.py
ai_calls_router/routing/adapters/: __init__.py  anthropic_messages.py  base.py  openai_chat.py  openai_responses.py
docs/: improvement-plan.md  tool-result-routing-design.md
docs/adr/: ADR-0001-canonical-contract-and-codex-bypass.md  ADR-0002-unified-accounting.md
docs/plans/: openai-compatibility.md  phase0-findings.md  refactor-architecture.md
docs/tasks/: effortless-install-and-desktop.md  oss-governance-and-standards.md
scripts/: check-cognitive-complexity.py  codex_spike_probe.py  preflight_sonnet_tiers.py
scripts/desktop-shim/: apply.sh  check-pointing.sh  claude-shim.zsh
src/ai_calls_router/: __init__.py  cli.py  compression.py  conversion.py  daemon.py  ledger.py  litellm_guard.py  routed_call.py  routing.py  savings.py  server.py  wizard.py
src/ai_calls_router/_lib/: config.py
src/ai_calls_router/accounting/: ledger.py  savings.py
src/ai_calls_router/ops/: __init__.py  daemon.py  desktop.py  wizard.py
src/ai_calls_router/proxy/: __init__.py  passthrough.py  server.py
src/ai_calls_router/routing/: __init__.py  compression.py  decide.py  direct.py  engine.py
tests/: acr_testkit.py  conftest.py  test_cli.py  test_compression.py  test_conversion.py  test_daemon.py  test_integration.py  test_passthrough.py  test_routed_call.py  test_savings.py  test_server.py  test_wizard.py
tests/e2e/: test_cli.py  test_cli_desktop.py  test_entry_points.py  test_error_scenarios.py
tests/fixtures/: conversion_golden.json  generate_golden.py
tests/integration/: test_compression_e2e.py  test_integration.py
tests/unit/: test_adapters.py  test_agent_defaults.py  test_agent_passthrough_upstream.py  test_agent_session.py  test_anthropic_direct.py  test_anthropic_oauth.py  test_bootstrap.py  test_chatgpt_oauth.py  test_codex_direct.py  test_codex_session.py  test_codex_ws_router.py  test_compression.py  test_config.py  test_content_sanitize.py  test_context_budget.py  test_context_window_guard.py  test_conversion.py  test_daemon.py  test_desktop.py  test_forward_compression.py  test_golden_routes.py  test_identify_provider.py  test_jsonnum.py  test_keyword_only_signatures.py  test_ledger.py  test_logging_setup.py  test_metrics_persistence.py  test_openai_chat_server.py  test_openai_compat_smoke.py  test_openai_inbound.py  test_openai_responses_adapter.py  test_openai_responses_server.py  test_passthrough.py  test_provider_config.py  test_provider_identity_server.py  test_reduce.py  test_responses_inbound.py  test_route_dispatch_anthropic_oauth.py  test_routed_call.py  test_routing.py  (+9 more)
