[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-calls-router"
dynamic = ["version"]
description = "Per-tool-result model routing proxy for Claude Code: serve cheap tool-result turns on any LiteLLM-supported model, keep decision turns on Anthropic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mahesh Kokare" }]
keywords = ["claude-code", "proxy", "llm-routing", "litellm", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.70",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "build>=1.2",
    "pre-commit>=3.5",
]

[project.scripts]
acr = "ai_calls_router.cli:main"

[project.urls]
Homepage = "https://github.com/maheshkokare/ai-calls-router"
Repository = "https://github.com/maheshkokare/ai-calls-router"
Issues = "https://github.com/maheshkokare/ai-calls-router/issues"
Changelog = "https://github.com/maheshkokare/ai-calls-router/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/ai_calls_router/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_calls_router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
pythonpath = ["tests"]
markers = [
    "unit: unit-level test (single module, fully isolated).",
    "integration: integration-level test (full app, mocked network boundaries).",
    "e2e: end-to-end test (HTTP surface or subprocess entry point).",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["src/ai_calls_router"]
