[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-calls-router"
dynamic = ["version"]
description = "Per-tool-result model routing proxy for Claude Code: serve cheap tool-result turns on any LiteLLM-supported model, keep decision turns on Anthropic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mahesh Kokare" }]
keywords = ["claude-code", "proxy", "llm-routing", "litellm", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "litellm>=1.70",
    "pyyaml>=6.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# headroom compression for the LiteLLM serving path. Optional: the runtime
# import is guarded, so without this extra installed compression is a no-op and
# the router still serves every request.
compression = ["headroom-ai>=0.25"]
dev = [
    "bandit>=1.7",
    "build>=1.2",
    "check-wheel-contents>=0.6",
    "deptry>=0.16",
    "interrogate>=1.7",
    "mutmut>=3.0",
    "pip-audit>=2.7",
    "pre-commit>=3.5",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-timeout>=2.0",
    "cognitive-complexity>=1.3",
    "lizard>=1.23",
    "radon>=6.0",
    "refurb>=2.0",
    "ruff>=0.15",
    "semgrep>=1.0",
    "twine>=5.0",
    "vulture>=2.11",
    "xenon>=0.9",
]

[project.scripts]
acr = "ai_calls_router.cli:main"

[project.urls]
Homepage = "https://github.com/maheshkokare/ai-calls-router"
Repository = "https://github.com/maheshkokare/ai-calls-router"
Issues = "https://github.com/maheshkokare/ai-calls-router/issues"
Changelog = "https://github.com/maheshkokare/ai-calls-router/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "ai_calls_router/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ai_calls_router"]
include = ["ai_calls_router/proxy/dashboard.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
pythonpath = ["tests"]
timeout = 30
markers = [
    "unit: unit-level test (single module, fully isolated).",
    "integration: integration-level test (full app, mocked network boundaries).",
    "e2e: end-to-end test (HTTP surface or subprocess entry point).",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B",     # existing
    "C4", "SIM", "RET", "ARG",     # readability / simplification
    "C90",                          # mccabe cognitive complexity (max-complexity=15)
    "PT",                           # pytest style
    "TCH",                          # type-checking imports
    "A",                            # builtins shadowing
    "PTH",                          # pathlib over os.path
    "RUF",                          # ruff-specific
    "PL",                           # pylint-inspired rules
    "D417",                         # pydocstyle: docstring args must match signature
    "S",                            # flake8-bandit security rules
    "TRY",                          # tryceratops exception handling
    "EM",                           # flake8-errmsg
    "ERA",                          # eradicate (dead commented-out code)
    "FURB",                         # refurb: Pythonic idiom enforcement (RUF031 already via "RUF")
    "G",                            # flake8-logging-format: forbid f-strings/.format in log calls (lazy %-args only)
]
ignore = [
    "RUF012",   # mutable classvar annotations need ClassVar[] on some patterns
    "S101",     # assert usage in tests is intentional
    "S104",     # possible binding to all interfaces is intentional for proxy
    "S301",     # pickle usage pattern not present but flagged
    "TRY003",   # long exception messages are acceptable
    "EM101",    # exception messages with string literals are intentional
    "EM102",    # f-string in exception is fine
    "PLR0913",  # too many arguments — already enforced by keyword-only rule
    "PLR2004",  # magic value comparisons in tests
]
extend-select = ["ANN401"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "TC001", "TC002", "TC003",   # type-checking imports in tests are fine
    "ARG001", "ARG002", "ARG005", # unused args in test fixtures/mocks
    "RUF005",                      # list concat in test data is readable
    "S",                           # security rules don't apply to test code
    "PLR",                         # pylint refactor rules too noisy for tests
    "PLC",                         # inline imports in test helpers
    "TRY",                         # exception handling patterns fine in tests
    "ERA",                         # commented-out calculation notes in tests
]
"tests/conftest.py" = [
    "ARG001",
]
"tests/fixtures/generate_golden.py" = [
    "TC001", "TC002", "TC003",
]
"ai_calls_router/cli.py" = [
    "ARG001",  # args.Namespace passed to handlers that don't use it
    "TC003",   # Callable import used at module level
    "S603", "S607", "PLW1510",  # subprocess usage in CLI launcher
]
"ai_calls_router/ops/daemon.py" = [
    "SIM105",  # try/except/pass in signal handling is intentional
    "S603", "S607", "PLW1510",  # subprocess usage in daemon starter
]
"ai_calls_router/proxy/server.py" = [
    "ARG001",  # health(request) doesn't use request
    "TC002", "TC003",  # Request + AsyncIterator in handler signatures
    "PLR0911",  # _try_route dispatch has many returns by design
]
"ai_calls_router/_lib/conversion.py" = [
    "C901",  # convert_messages_for_litellm is a well-tested dispatch function
    "PLR0912",  # many branches in message dispatch function
]
"ai_calls_router/accounting/ledger.py" = [
    "TC003",  # Path used in runtime string conversion
]
"ai_calls_router/accounting/savings.py" = [
    "TC003",  # Path used in runtime operations
]
"ai_calls_router/ops/wizard.py" = [
    "TC003",  # Path used in runtime operations
]
"ai_calls_router/proxy/passthrough.py" = [
    "TC003",  # AsyncIterator used in generator annotations
]
"ai_calls_router/_lib/litellm_guard.py" = [
    "PLW0603", "PLC0415",  # lazy loading with global + deferred import by design
]
"ai_calls_router/routing/compression.py" = [
    "PLC0415",  # headroom imported lazily inside _load_compressor (optional dep)
]
"ai_calls_router/routing/decide.py" = [
    "TRY300",  # try/except flow returns at end by design
]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["ai_calls_router"]
exclude = ["tests", "build", "dist", ".venv"]
typeCheckingMode = "strict"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownLambdaType = "error"
reportUnknownParameterType = "error"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = "error"
reportMissingParameterType = "error"


[tool.coverage.run]
source = ["ai_calls_router"]
omit = ["tests/*"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B404", "B603", "B607", "B101"]  # subprocess + assert for type narrowing

[tool.deptry]
extend_exclude = ["tests", ".venv", "build", "dist"]
known_first_party = ["ai_calls_router"]
pep621_dev_dependency_groups = ["dev"]
package_module_name_map = { "headroom-ai" = "headroom" }

[tool.interrogate]
exclude = ["tests", "build", "dist", ".venv"]
fail-under = 0

[tool.semgrep]
config = "auto"
